--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "External/src/lodepng"]
 	path = External/src/lodepng
 	url = https://github.com/S-LiuXiaolong/lodepng.git
+[submodule "External/src/libjpeg-turbo"]
+	path = External/src/libjpeg-turbo
+	url = https://github.com/S-LiuXiaolong/libjpeg-turbo.git
