--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "External/src/zlib"]
 	path = External/src/zlib
 	url = https://github.com/S-LiuXiaolong/zlib.git
+[submodule "External/src/libjpeg-turbo"]
+	path = External/src/libjpeg-turbo
+	url = https://github.com/S-LiuXiaolong/libjpeg-turbo.git
