--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -19,8 +19,8 @@ target_link_libraries(LodePngTest Common)
 add_executable(LibJpegTest LibJpegTest.cpp)
 target_link_libraries(LibJpegTest Common)
 
-add_executable(SceneObjectTest SceneObjectTest.cpp)
-target_link_libraries(SceneObjectTest Common)
+# add_executable(SceneObjectTest SceneObjectTest.cpp)
+# target_link_libraries(SceneObjectTest Common)
 
 add_executable(SceneLoadingTest SceneLoadingTest.cpp)
 target_link_libraries(SceneLoadingTest Common)
