Able to display correct model location and textures (but something wrong in Input Assembler stage)

--- a/Platform/Windows/CMakeLists.txt
+++ b/Platform/Windows/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(WindowsApplication WindowsApplication.cpp)
 
-add_executable(CoronaEngineD3d12 
+add_library(CoronaEngineD3d12 
     D3d12Application.cpp
     D3d12ApplicationConfig.cpp
 )
