--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,9 @@ include_directories("${MYGE_EXTERNAL_ROOT}/include")
 set(MYGE_EXTERNAL_LIBRARY_PATH ${MYGE_EXTERNAL_ROOT}/lib)
 
 # include(CTest)
+add_subdirectory(Asset)
+add_subdirectory(Editor)
 add_subdirectory(Framework)
 add_subdirectory(Platform)
 add_subdirectory(RHI)
-add_subdirectory(Asset)
 add_subdirectory(Test)
