--- a/Platform/Windows/OpenGL/CMakeLists.txt
+++ b/Platform/Windows/OpenGL/CMakeLists.txt
@@ -1,6 +1,6 @@
 find_package(OpenGL REQUIRED)
 
-add_executable(MyGameEngineOpenGL 
+add_library(MyGameEngineOpenGL 
     main.cpp
     glad.c
     )
