--- a/Platform/Windows/OpenGL/CMakeLists.txt
+++ b/Platform/Windows/OpenGL/CMakeLists.txt
@@ -1,11 +1,12 @@
 find_package(OpenGL REQUIRED)
 
-add_library(MyGameEngineOpenGL 
+add_executable(MyGameEngineOpenGL 
     main.cpp
     glad.c
     )
 
-target_link_libraries(MyGameEngineOpenGL Common ${OPENGL_LIBRARIES})
+# target_link_libraries(MyGameEngineOpenGL Common ${OPENGL_LIBRARIES})
+target_link_libraries(MyGameEngineOpenGL ${OPENGL_LIBRARIES})
 target_link_libraries(MyGameEngineOpenGL 
             debug ${GLFW_LIBRARY_DEBUG}
             )
