Using a trick to solve the axis draw problem

--- a/Asset/Shaders/CMakeLists.txt
+++ b/Asset/Shaders/CMakeLists.txt
@@ -6,6 +6,7 @@ COMMAND echo "Start processing Engine Shaders"
 set(HLSL_SHADER_SOURCES 
             default.vert default.frag
             pbr.vert pbr.frag
+            debug.vert debug.frag
         )
 
 IF(WIN32)
