Trying to add Forwardpass layer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ project(CoronaEngine)
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Ability")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Algorism")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
+include_directories("${PROJECT_SOURCE_DIR}/Framework/DrawPass")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Geometries")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
